Mon Jul 25 22:14:37 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* lib/xmlrpc/client.rb: Fix possible HTTP header formatting failure by
	  'Basic' header. Long username caused the base64 String truncation in
	  HTTP header which is not allowed. See #5046.

	* test/xmlrpc/test_webrick_server.rb: test it.

Mon Jul 25 15:04:33 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* ext/openssl/lib/openssl.rb: End of transition period introduced by
	  [ruby-dev:38018]. From the next version of 1.9.3, you should use
	    require "openssl"
	  instead of
	    require "openssl/ssl"
	  and
	    require "openssl/x509"

Mon Jul 25 13:46:38 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* ext/openssl/lib/openssl/x509.rb: Cosmetic change: move definition
	  introduced in r30152 to x509-internal.rb.

Mon Jul 25 13:09:42 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* ext/openssl/ossl_ssl.c (ossl_ssl_shutdown): Avoid randomly generated
	  SSLError from SSLSocket just after invoking SSLSocket#close.
	  OpenSSL's SSL_shutdown could try to send alert packet and it might
	  set SSLerr(global error stack) as the result. It causes the next
	  SSL read/write operation to fail by unrelated reason.

	  By design, we're ignoring any error at SSL_shutdown() so we clear
	  global error stack after SSL_shutdown is called. See #5039.

Sun Jul 24 20:29:53 2011  Tanaka Akira  <akr@fsij.org>

	* ext/socket/extconf.rb: refine the recvmsg test.

Sun Jul 24 20:02:31 2011  Tanaka Akira  <akr@fsij.org>

	* ext/socket/extconf.rb: fix the recvmsg test.

Sun Jul 24 08:42:51 2011  Tanaka Akira  <akr@fsij.org>

	* ext/socket/extconf.rb: test recvmsg allocates file descriptors for
	  fd passing even with MSG_PEEK.

	* ext/socket/ancdata.c: use the above test result.

Sun Jul 24 01:04:50 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/specification.rb:  Restore behavior of
	  Gem::Specification#loaded.  [Ruby 1.9 - Bug #5032]

Sun Jul 24 00:05:00 2011  Jeremy Evans  <merch-redmine@jeremyevans.net>
